--- a/index.html
+++ b/index.html
@@ -12,48 +12,185 @@
     <!-- Link to FontAwesome CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <!-- Liên kết Boostrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <div class="main-wrapper">
-        <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 px-4 px-lg-5" style="top: -100px;">
-        <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <img class="img-fluid me-2" src="./assets/images/Logo-UEF.png" alt="" style="width: 80px;">
-        </a>
-        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav mx-auto py-4 py-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
-                <a href="roadmap.html" class="nav-item nav-link">Roadmap</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu shadow-sm m-0">
-                        <a href="feature.html" class="dropdown-item">Feature</a>
-                        <a href="token.html" class="dropdown-item">Token Sale</a>
-                        <a href="faq.html" class="dropdown-item">FAQs</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 px-4 px-lg-5">
+                <a href="index.html" class="navbar-brand d-flex align-items-center">
+                    <img class="img-fluid me-2" src="./assets/images/Logo-UEF.png" alt="" style="width: 80px;">
+                </a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-nav mx-auto py-4 py-lg-0">
+                        <a href="index.html" class="nav-item nav-link nav-hover active">Home</a>
+                        <a href="about.html" class="nav-item nav-link nav-hover">About</a>
+                        <a href="service.html" class="nav-item nav-link nav-hover">Service</a>
+                        <a href="roadmap.html" class="nav-item nav-link nav-hover">Roadmap</a>
+                        <div class="nav-item nav-hover dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <div class="dropdown-menu shadow-sm m-0">
+                                <a href="feature.html" class="dropdown-item">Feature</a>
+                                <a href="token.html" class="dropdown-item">Token Sale</a>
+                                <a href="faq.html" class="dropdown-item">FAQs</a>
+                                <a href="404.html" class="dropdown-item">404 Page</a>
+                            </div>
+                        </div>
+                        <a href="contact.html" class="nav-item nav-link nav-hover">Contact</a>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
-            <div class="h-100 d-lg-inline-flex align-items-center d-none">
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-            </div>
+                <ul class="nav nav-tabs ms-auto user-menu">
+                    <li class="nav-item dropdown flag-nav dropdown-heads">
+                        <a class="nav-link" href="#" 
+                        data-bs-toggle="dropdown" role="button" style="font-size: 1.5rem;">
+                            <i class="far fa-bell"></i>
+                            <span class="badge rounded-pill"></span>
+                        </a>
+                        <div class="dropdown-menu notifications" data-bs-popper="bottom-end">
+                            <div class="topnav-dropdown-header">
+                                <span class="notification-title">Notifications</span>
+                                <a href="javascript:void(0)" class="clear-noti"> Clear All</a>
+                            </div>
+                            <div class="noti-content">
+                                <ul class="notification-list">
+                                    <li class="notification-message">
+                                        <a href="https://kanakku.dreamguystech.com/html/template/profile.html">
+                                            <div class="media d-flex">
+                                                <span class="avatar avatar-sm">
+                                                    <img class="avatar-img rounded-circle" alt=""
+                                                        src="./assets/images/avatar.jpg">
+                                                </span>
+                                                <div class="media-body">
+                                                    <p class="noti-details"><span class="noti-title">Brian Johnson</span>
+                                                        paid the invoice <span class="noti-title">#DF65485</span></p>
+                                                    <p class="noti-time"><span class="notification-time">4 mins ago</span>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="notification-message">
+                                        <a href="https://kanakku.dreamguystech.com/html/template/profile.html">
+                                            <div class="media d-flex">
+                                                <span class="avatar avatar-sm">
+                                                    <img class="avatar-img rounded-circle" alt=""
+                                                        src="./assets/images/avatarpatient.jpg">
+                                                </span>
+                                                <div class="media-body">
+                                                    <p class="noti-details"><span class="noti-title">Marie Canales</span>
+                                                        has accepted your estimate <span
+                                                            class="noti-title">#GTR458789</span></p>
+                                                    <p class="noti-time"><span class="notification-time">6 mins ago</span>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="notification-message">
+                                        <a href="https://kanakku.dreamguystech.com/html/template/profile.html">
+                                            <div class="media d-flex">
+                                                <div class="avatar avatar-sm">
+                                                    <span class="avatar-title rounded-circle bg-primary-light"><i
+                                                            class="far fa-user"></i></span>
+                                                </div>
+                                                <div class="media-body">
+                                                    <p class="noti-details"><span class="noti-title">New user
+                                                            registered</span></p>
+                                                    <p class="noti-time"><span class="notification-time">8 mins ago</span>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="notification-message">
+                                        <a href="https://kanakku.dreamguystech.com/html/template/profile.html">
+                                            <div class="media d-flex">
+                                                <span class="avatar avatar-sm">
+                                                    <img class="avatar-img rounded-circle" alt=""
+                                                        src="./assets/images/avatarpatient.jpg">
+                                                </span>
+                                                <div class="media-body">
+                                                    <p class="noti-details"><span class="noti-title">Barbara Moore</span>
+                                                        declined the invoice <span class="noti-title">#RDW026896</span></p>
+                                                    <p class="noti-time"><span class="notification-time">12 mins ago</span>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="notification-message">
+                                        <a href="https://kanakku.dreamguystech.com/html/template/profile.html">
+                                            <div class="media d-flex">
+                                                <div class="avatar avatar-sm">
+                                                    <span class="avatar-title rounded-circle bg-info-light"><i
+                                                            class="far fa-comment"></i></span>
+                                                </div>
+                                                <div class="media-body">
+                                                    <p class="noti-details"><span class="noti-title">You have received a new
+                                                            message</span></p>
+                                                    <p class="noti-time"><span class="notification-time">2 days ago</span>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="topnav-dropdown-footer">
+                                <a href="https://kanakku.dreamguystech.com/html/template/notifications.html">View all
+                                    Notifications</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a href="javascript:void(0)" class="user-link  nav-link" data-bs-toggle="dropdown">
+                            <span class="user-img">
+                                <img src="./assets/images/avatarpatient.jpg" alt="img"
+                                    class="profilesidebar">
+                                <span class="animate-circle"></span>
+                            </span>
+                            <span class="user-content">
+                                <span class="user-details">Admin</span>
+                                <span class="user-name">Trần Cao Minh Thắng</span>
+                            </span>
+                        </a>
+                        <div class="dropdown-menu menu-drop-user">
+                            <div class="profilemenu">
+                                <div class="subscription-menu">
+                                    <ul>
+                                        <li>
+                                            <a class="dropdown-item"
+                                                href="">Profile</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item"
+                                                href="">Settings</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="subscription-logout">
+                                    <ul>
+                                        <li class="pb-0">
+                                            <a class="dropdown-item"
+                                                href="">Log
+                                                Out</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>     
+            </nav>
         </div>
-    </nav>
+        
         <header class="header header-one"></header>
 
     </div>
 
-
-
+    <a href="index.html" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="display: none;"><i class="bi bi-arrow-up"></i></a>
 
     <!-- Script -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
@@ -64,7 +201,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js"></script>
     <!-- Add Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
