--- a/index.html
+++ b/index.html
@@ -27,19 +27,8 @@
                 </button>
                 <div class="navbar-nav mx-auto py-4 py-lg-0">
                         <a href="index.html" class="nav-item nav-link nav-hover active">Home</a>
-                        <a href="about.html" class="nav-item nav-link nav-hover">About</a>
-                        <a href="service.html" class="nav-item nav-link nav-hover">Service</a>
-                        <a href="roadmap.html" class="nav-item nav-link nav-hover">Roadmap</a>
-                        <div class="nav-item nav-hover dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu shadow-sm m-0">
-                                <a href="feature.html" class="dropdown-item">Feature</a>
-                                <a href="token.html" class="dropdown-item">Token Sale</a>
-                                <a href="faq.html" class="dropdown-item">FAQs</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
-                            </div>
-                        </div>
-                        <a href="contact.html" class="nav-item nav-link nav-hover">Contact</a>
+                        <a href="findjob.html" class="nav-item nav-link nav-hover">Tìm Việc Làm</a>
+                        <a href="company.html" class="nav-item nav-link nav-hover">Công ty</a>
                 </div>
                 <ul class="nav nav-tabs ms-auto user-menu">
                     <li class="nav-item dropdown flag-nav dropdown-heads">
