--- a/employer/create.html
+++ b/employer/create.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,20 @@
     <!-- Link to DataTables CSS -->
     <link href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css" rel="stylesheet">
     <!-- Link to DateTimePicker CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet">
+    <link
+        href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css"
+        rel="stylesheet">
     <!-- Link to FontAwesome CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <!-- Liên kết Boostrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/responsive.css">
+    <!-- Liên kết Boostrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/responsive.css">
+    <link rel="stylesheet" href="../assets/plugins/bootstrap-tagsinput-latest/dist/bootstrap-tagsinput.css">
 </head>
+
 <body>
     <div id="wrapper">
         <div class="overlay"></div>
@@ -46,22 +52,22 @@
     <header class="header header-one">
         <div class="header-left header-left-one">
             <a href="index.html" class="logo">
-                <img src="./assets/images/Logo-UEF.png" alt="">
+                <img src="../assets/images/Logo-UEF.png" alt="">
             </a>
             <a href="index.html" class="logo logo-small">
-                <img src="./assets/images/Logo-UEF.png" alt="">
+                <img src="../assets/images/Logo-UEF.png" alt="">
             </a>
         </div>
 
         <ul class="nav nav-tabs menu">
             <li class="nav-item">
-                <a href="index.html" class="nav-hover nav-link active">Trang chủ</a>
+                <a href="index.html" class="nav-hover nav-link ">Trang chủ</a>
             </li>
             <li class="nav-item">
                 <a href="job.html" class="nav-link nav-hover">Tìm Việc Làm</a>
             </li>
             <li class="nav-item">
-                <a href="company.html" class="nav-link nav-hover">Công ty</a>
+                <a href="company.html" class="nav-link nav-hover active">Công ty</a>
             </li>
         </ul>
         <ul class="nav nav-tabs user-menu">
@@ -83,7 +89,7 @@
                                     <div class="media d-flex">
                                         <span class="avatar avatar-sm">
                                             <img class="avatar-img rounded-circle" alt=""
-                                                src="./assets/images/avatar.jpg">
+                                                src="../assets/images/avatar.jpg">
                                         </span>
                                         <div class="media-body">
                                             <p class="noti-details"><span class="noti-title">Brian
@@ -102,7 +108,7 @@
                                     <div class="media d-flex">
                                         <span class="avatar avatar-sm">
                                             <img class="avatar-img rounded-circle" alt=""
-                                                src="./assets/images/avatarpatient.jpg">
+                                                src="../assets/images/avatarpatient.jpg">
                                         </span>
                                         <div class="media-body">
                                             <p class="noti-details"><span class="noti-title">Marie
@@ -138,7 +144,7 @@
                                     <div class="media d-flex">
                                         <span class="avatar avatar-sm">
                                             <img class="avatar-img rounded-circle" alt=""
-                                                src="./assets/images/avatarpatient.jpg">
+                                                src="../assets/images/avatarpatient.jpg">
                                         </span>
                                         <div class="media-body">
                                             <p class="noti-details"><span class="noti-title">Barbara
@@ -180,7 +186,7 @@
             <li class="nav-item dropdown has-arrow main-drop">
                 <a href="javascript:void(0)" class="user-link dropdown-toggle nav-link" data-bs-toggle="dropdown">
                     <span class="user-img">
-                        <img src="./assets/images/avatarpatient.jpg" alt="img" class="profilesidebar">
+                        <img src="../assets/images/avatarpatient.jpg" alt="img" class="profilesidebar">
                         <span class="animate-circle"></span>
                     </span>
                     <span class="user-content">
@@ -214,10 +220,95 @@
             </li>
         </ul>
     </header>
+
     <main class="page-wrapper">
+        <div class="content container">
+            <div class="row">
+                <div class="col-xl-8 offset-xl-2">
+
+                    <div class="page-header">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <h3 class="page-title">Add Post</h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="bank-inner-details">
+                                <div class="row">
+                                    <div class="col-lg-12 col-md-12">
+                                        <div class="form-group">
+                                            <label>Title<span class="text-danger">*</span></label>
+                                            <input type="text" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <div class="form-group modal-select-box">
+                                            <label>Category</label>
+                                            <select class="select select2-hidden-accessible" data-select2-id="1"
+                                                tabindex="-1" aria-hidden="true">
+                                                <option value="1" data-select2-id="3">Expenses</option>
+                                                <option value="2">Sales</option>
+                                                <option value="3">profit-loss</option>
+                                            </select><span class="select2 select2-container select2-container--default"
+                                                dir="ltr" data-select2-id="2" style="width: 100%;"><span
+                                                    class="selection"><span
+                                                        class="select2-selection select2-selection--single"
+                                                        role="combobox" aria-haspopup="true" aria-expanded="false"
+                                                        tabindex="0" aria-labelledby="select2-aj5s-container"><span
+                                                            class="select2-selection__rendered"
+                                                            id="select2-aj5s-container" role="textbox"
+                                                            aria-readonly="true" title="Expenses">Expenses</span><span
+                                                            class="select2-selection__arrow" role="presentation"><b
+                                                                role="presentation"></b></span></span></span><span
+                                                    class="dropdown-wrapper" aria-hidden="true"></span></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <div class="form-group">
+                                            <label>Tag</label>
+                                            <input type="text" class="input-tags form-control" placeholder="Enter Tags" data-role="tagsinput">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <div class="form-group">
+                                            <label>Blog Image</label>
+                                            <div class="change-photo-btn">
+                                                <div>
+                                                    <p>Add Image</p>
+                                                </div>
+                                                <input type="file" class="upload">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 col-md-12">
+                                        <div class="form-group">
+                                            <label>Description</label>
+                                            <textarea name="editor1"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class=" blog-categories-btn pt-0">
+                            <div class="bank-details-btn ">
+                                <a href="blog.html" class="btn btn-primary me-2">Add Post</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
-    <a href="index.html" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="display: none;"><i class="bi bi-arrow-up"></i></a>
+    <footer>
+
+    </footer>
+    <a href="index.html" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="display: none;">
+        <i class="bi bi-arrow-up"></i>
+    </a>
 
     <!-- Script -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
@@ -226,10 +317,20 @@
     <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
     <!-- Add DateTimePicker JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js"></script>
     <!-- Add Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="../assets/js/script.js"></script>
+    <!-- CKEditor 4 Standard -->
+    <script src="//cdn.ckeditor.com/4.21.0/standard/ckeditor.js"></script>
+    <script src="../assets/plugins/bootstrap-tagsinput-latest/dist/bootstrap-tagsinput.js"></script>
+    <script>
+        CKEDITOR.replace('editor1'); // Khởi tạo bảng soạn nội dung CKEditor
+    </script>
 </body>
+
 </html>
