--- a/job.html
+++ b/job.html
@@ -18,8 +18,9 @@
     <!-- Liên kết Boostrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/responsive.css">
 </head>
 
 <body>
@@ -226,9 +227,9 @@
                     <div class="col">
                         <h3 class="page-title">Doanh Nghiệp</h3>
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="">Dashboard</a>
+                            <li class="breadcrumb-item"><a href="./index.html">Home</a>
                             </li>
-                            <li class="breadcrumb-item active">Doanh Nghiệp</li>
+                            <li class="breadcrumb-item active">Tìm Việc Làm</li>
                         </ul>
                     </div>
                     <div class="col-auto">
@@ -772,7 +773,11 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <!-- CKEditor 4 Standard -->
+    <script src="//cdn.ckeditor.com/4.21.0/standard/ckeditor.js"></script>
+    <script src="../assets/plugins/bootstrap-tagsinput-latest/dist/bootstrap-tagsinput.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 
 </html>
